Light modification to stop having a horizontal scroll

--- a/src/style.css
+++ b/src/style.css
@@ -11,4 +11,6 @@ body {
       rgba(255, 255, 255, 0.5)
     ),
     url('./assets/PokeTranslateBg.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
